--- a/Tokyo Night/.config/polybar/config
+++ b/Tokyo Night/.config/polybar/config
@@ -1,15 +1,14 @@
-;=====================================================
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/jaagr/polybar
-;
-;   The README contains alot of information
-;	Themes : https://github.com/jaagr/dots/tree/master/.local/etc/themer/themes
-;   https://github.com/jaagr/polybar/wiki/
-;   https://github.com/jaagr/polybar/wiki/Configuration
-;   https://github.com/jaagr/polybar/wiki/Formatting
-;
-;=====================================================
+;===========================================;
+;           _    _____ _________            ;
+;          | |  |  _  \  _   _  |           ;
+;          | |  | | | | | | | | |           ;
+;          | |  | | | | | | | | |           ;
+;          | |__| |_| | | | | | |           ;
+;          |____|____/|_| |_| |_|           ;
+;                                           ;
+;   site: https://link-does-mods.github.io/ ;
+; github: https://github.com/link-does-mods ;
+;===========================================;
 
 
 [global/wm]
