--- a/Tokyo Night/.config/picom/picom.conf
+++ b/Tokyo Night/.config/picom/picom.conf
@@ -1,7 +1,18 @@
-#################################
-#             Shadows           #
-#################################
+#############################################
+#           _    _____ _________            #
+#          | |  |  _  \  _   _  |           #
+#          | |  | | | | | | | | |           #
+#          | |  | | | | | | | | |           #
+#          | |__| |_| | | | | | |           #
+#          |____|____/|_| |_| |_|           #
+#                                           #
+#   site: https://link-does-mods.github.io/ #
+# github: https://github.com/link-does-mods #
+#############################################
 
+#######################################################
+# Shadows
+#######################################################
 
 # Enabled client-side shadows on windows. Note desktop windows 
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
@@ -79,11 +90,9 @@ shadow-exclude = [
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
 # xinerama-shadow-crop = false
 
-
-#################################
-#           Fading              #
-#################################
-
+#######################################################
+# Fading
+#######################################################
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
@@ -110,11 +119,9 @@ fade-out-step = 0.04;
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
 
-
-#################################
-#   Transparency / Opacity      #
-#################################
-
+#######################################################
+# Transparency / Opacity
+#######################################################
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
@@ -152,11 +159,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 # opacity-rule = []
 
-
-#################################
-#     Background-Blurring       #
-#################################
-
+#######################################################
+# Background-Blurring
+#######################################################
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method = 
@@ -198,9 +203,9 @@ blur-background-exclude = [
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
-#################################
-#       General Settings        #
-#################################
+#######################################################
+# General Settings
+#######################################################
 
 # Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
 # daemon = false
